--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -5,4 +5,5 @@
     <item type="id" name="tag_listholder" />
     <item type="id" name="tag_imageview" />
     <item type="id" name="tag_my_express" />
+    <item type="id" name="tag_area_price_set" />
 </resources>
