--- a/app/src/main/res/layout/layout_choose_place_item.xml
+++ b/app/src/main/res/layout/layout_choose_place_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/color_bg"
@@ -11,14 +11,19 @@
         android:id="@+id/tv_choose_place_item"
         android:layout_width="match_parent"
         android:layout_height="28dp"
-        android:text="北京"
-        android:gravity="center"
-        android:textColor="@android:color/holo_red_light"/>
+        android:text="请选择"
+        android:textSize="14sp"
+        android:gravity="center_vertical"
+        android:textColor="@android:color/holo_red_light"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"/>
 
     <View
         android:id="@+id/v_choose_place_item"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@android:color/holo_red_light"/>
+        android:background="@android:color/holo_red_light"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"/>
 
 </LinearLayout>
