--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -268,9 +268,9 @@
                         android:layout_height="wrap_content"
                         android:text="重量："/>
 
-                    <EditText
+                    <com.express56.xq.widget.WeightChoose
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -437,7 +437,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="提交"/>
+                android:text="提交"
+                android:layout_gravity="center_horizontal"/>
 
         </LinearLayout>
 
