--- a/app/src/main/res/layout/activity_myexpress.xml
+++ b/app/src/main/res/layout/activity_myexpress.xml
@@ -29,7 +29,7 @@
             android:textSize="@dimen/font_content_size_2"/>
 
         <Button
-            android:id="@+id/place_order_btn"
+            android:id="@+id/btn_place_order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -56,7 +56,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="8dp"
-            android:scrollbars="none"/>
+            android:scrollbars="none"
+            android:cacheColorHint="#00000000"
+            android:listSelector="#00000000"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:drawSelectorOnTop="true"
+            android:background="@color/color_bg"/>
 
     </com.andview.refreshview.XRefreshView>
 
