--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -47,6 +47,7 @@
                 android:orientation="vertical">
 
                 <RelativeLayout
+                    android:id="@+id/rl_place_order_number_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -63,17 +64,25 @@
 
                 </RelativeLayout>
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="取件时间："
-                    android:layout_marginTop="5dp"/>
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="取件地点："
-                    android:layout_marginTop="5dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="取件时间："
+                        android:layout_marginTop="5dp"/>
+
+                    <Button
+                        android:id="@+id/btn_place_order_choose_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="选择时间"/>
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
@@ -102,6 +111,7 @@
                     android:layout_height="wrap_content"/>
 
                 <TextView
+                    android:id="@+id/tv_place_order_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -164,11 +174,13 @@
                         android:text="发货地址："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_send_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="江苏省苏州市"/>
 
                     <Button
+                        android:id="@+id/btn_place_order_send_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="编辑"
@@ -232,11 +244,13 @@
                         android:text="收件人地址："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_get_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="江苏省苏州市"/>
 
                     <Button
+                        android:id="@+id/btn_place_order_get_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="编辑"
