--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,4 +6,5 @@
     <item type="id" name="tag_imageview" />
     <item type="id" name="tag_my_express" />
     <item type="id" name="tag_area_price_set" />
+    <item type="id" name="tag_spinner" />
 </resources>
