--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -75,6 +75,12 @@
                         android:text="取件时间："
                         android:layout_marginTop="5dp"/>
 
+                    <TextView
+                        android:id="@+id/tv_place_order_get_item_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"/>
+
                     <Button
                         android:id="@+id/btn_place_order_choose_date"
                         android:layout_width="wrap_content"
@@ -108,7 +114,8 @@
                     android:id="@+id/sp_place_order_edit_express_company"
                     android:layout_toRightOf="@id/tv_place_order_edit_express_company"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:background="@color/color_bg"/>
 
                 <TextView
                     android:id="@+id/tv_place_order_number"
@@ -142,6 +149,7 @@
                         android:text="寄件人："/>
                     
                     <EditText
+                        android:id="@+id/et_place_order_sender_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -158,35 +166,55 @@
                         android:text="寄件人电话："/>
 
                     <EditText
+                        android:id="@+id/et_place_order_sender_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/tv_place_order_sender_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="发货地址："/>
 
-                    <TextView
-                        android:id="@+id/tv_place_order_send_item"
+                    <LinearLayout
+                        android:id="@+id/ll_place_order_sender"
+                        android:layout_toRightOf="@id/tv_place_order_sender_address"
+                        android:layout_alignTop="@id/tv_place_order_sender_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="江苏省苏州市"/>
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
 
-                    <Button
-                        android:id="@+id/btn_place_order_send_item"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="编辑"
-                        android:layout_marginLeft="10dp"/>
+                        <TextView
+                            android:id="@+id/tv_place_order_send_item"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="江苏省苏州市"/>
 
-                </LinearLayout>
+                        <Button
+                            android:id="@+id/btn_place_order_send_item"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="编辑"
+                            android:layout_marginLeft="10dp"
+                            android:background="@color/color_bg"/>
+
+                    </LinearLayout>
+
+                    <EditText
+                        android:id="@+id/et_place_order_sender_address"
+                        android:layout_toRightOf="@id/tv_place_order_sender_address"
+                        android:layout_below="@id/ll_place_order_sender"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -212,6 +240,7 @@
                         android:text="收件人："/>
 
                     <EditText
+                        android:id="@+id/et_place_order_receiver_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -228,10 +257,55 @@
                         android:text="收件人电话："/>
 
                     <EditText
+                        android:id="@+id/et_place_order_receiver_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tv_place_order_receiver_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="收货地址："/>
+
+                    <LinearLayout
+                        android:id="@+id/ll_place_order_receiver"
+                        android:layout_toRightOf="@id/tv_place_order_receiver_address"
+                        android:layout_alignTop="@id/tv_place_order_receiver_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
+
+                        <TextView
+                            android:id="@+id/tv_place_order_get_item"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="江苏省苏州市"/>
+
+                        <Button
+                            android:id="@+id/btn_place_order_get_item"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="编辑"
+                            android:layout_marginLeft="10dp"
+                            android:background="@color/color_bg"/>
+
+                    </LinearLayout>
+
+                    <EditText
+                        android:id="@+id/et_place_order_receiver_address"
+                        android:layout_toRightOf="@id/tv_place_order_receiver_address"
+                        android:layout_below="@id/ll_place_order_receiver"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -241,20 +315,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="收件人地址："/>
+                        android:text="是否到付："/>
 
-                    <TextView
-                        android:id="@+id/tv_place_order_get_item"
+                    <Spinner
+                        android:id="@+id/sp_place_order_arrive"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="江苏省苏州市"/>
-
-                    <Button
-                        android:id="@+id/btn_place_order_get_item"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="编辑"
-                        android:layout_marginLeft="10dp"/>
+                        android:background="@color/color_bg"/>
 
                 </LinearLayout>
 
@@ -283,6 +350,7 @@
                         android:text="重量："/>
 
                     <com.express56.xq.widget.WeightChoose
+                        android:id="@+id/wc_place_order"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
@@ -294,56 +362,21 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="大小："/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="长"/>
+                        android:layout_marginLeft="5dp"
+                        android:text="备注："/>
 
                     <EditText
-                        android:layout_width="wrap_content"
+                        android:id="@+id/et_place_order_remark"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="CM"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="宽"/>
-
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="CM"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="高"/>
-
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="CM"/>
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -351,42 +384,65 @@
                         android:text="是否保价："/>
 
                      <Spinner
+                         android:id="@+id/sp_place_order_support_value"
                          android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"></Spinner>
+                         android:layout_height="wrap_content"
+                         android:background="@color/color_bg"/>
 
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
+                    <LinearLayout
+                        android:id="@+id/ll_place_order_support_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="元"/>
+                        android:visibility="gone">
+
+                        <EditText
+                            android:id="@+id/et_place_order_support_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="元"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="是否代收贷款："/>
+                        android:text="是否代收货款："/>
 
                     <Spinner
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"></Spinner>
-
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
+                        android:id="@+id/sp_place_order_support_charge"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="元"/>
+                        android:background="@color/color_bg"/>
+
+                    <LinearLayout
+                        android:id="@+id/ll_place_order_support_charge"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone">
+
+                        <EditText
+                            android:id="@+id/et_place_order_support_charge"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="元"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -401,6 +457,7 @@
                         android:text="描述："/>
 
                     <EditText
+                        android:id="@+id/et_place_order_desc"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -424,6 +481,7 @@
                     android:text="快递费："/>
                 
                 <EditText
+                    android:id="@+id/et_place_order_express_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 
@@ -432,27 +490,29 @@
                     android:layout_height="wrap_content"
                     android:text="元"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="保价费："/>
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="元"/>
-
             </LinearLayout>
 
-            <Button
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="提交"
-                android:layout_gravity="center_horizontal"/>
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal">
+
+                <Button
+                    android:id="@+id/btn_place_order_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="保存"
+                    android:layout_marginRight="10dp"/>
+
+                <Button
+                    android:id="@+id/btn_place_order_save_release"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="保存并发布"/>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
