--- a/app/src/main/res/layout/activity_place_order_show.xml
+++ b/app/src/main/res/layout/activity_place_order_show.xml
@@ -50,12 +50,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="单号：1234567890"/>
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="单号："/>
+
+                        <TextView
+                            android:id="@+id/tv_place_order_show_number"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                    </LinearLayout>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_create_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
@@ -63,17 +76,23 @@
 
                 </RelativeLayout>
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="取件时间："
-                    android:layout_marginTop="5dp"/>
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="取件地点："
-                    android:layout_marginTop="5dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="取件时间："/>
+
+                    <TextView
+                        android:id="@+id/tv_place_order_show_serviceTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -96,17 +115,10 @@
                     android:layout_centerVertical="true"/>
 
                 <TextView
-                    android:id="@+id/tv_place_order_edit_express_company_show"
+                    android:id="@+id/tv_place_order_show_company"
                     android:layout_toRightOf="@id/tv_place_order_edit_express_company"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:text="快递单号：1234567890"
-                    android:layout_centerVertical="true"/>
 
             </RelativeLayout>
 
@@ -132,6 +144,7 @@
                         android:text="寄件人："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_sender"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -148,6 +161,7 @@
                         android:text="寄件人电话："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_sender_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -164,6 +178,7 @@
                         android:text="发货地址："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_sender_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="江苏省苏州市"/>
@@ -194,6 +209,7 @@
                         android:text="收件人："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_receiver"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -210,6 +226,7 @@
                         android:text="收件人电话："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_receiver_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -226,6 +243,7 @@
                         android:text="收件人地址："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_receiver_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="江苏省苏州市"/>
@@ -257,6 +275,7 @@
                         android:text="重量："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_weight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
@@ -268,49 +287,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="大小："/>
+                        android:text="备注："
+                        android:layout_marginLeft="5dp"/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_remark"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="长"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="CM"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="宽"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="CM"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="高"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="CM"/>
+                        android:layout_height="wrap_content"/>
 
                 </LinearLayout>
 
@@ -325,6 +308,7 @@
                         android:text="是否保价："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_support_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="元"/>
@@ -339,9 +323,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="是否代收贷款："/>
+                        android:text="是否代收货款："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_support_charge"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="元"/>
@@ -359,6 +344,7 @@
                         android:text="描述："/>
 
                     <TextView
+                        android:id="@+id/tv_place_order_show_desc"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -382,6 +368,7 @@
                     android:text="快递费："/>
                 
                 <TextView
+                    android:id="@+id/tv_place_order_show_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="元"/>
@@ -392,6 +379,7 @@
                     android:text="保价费："/>
 
                 <TextView
+                    android:id="@+id/tv_place_order_show_support_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="元"/>
