--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,8 @@
     <color name="color_bike_site_type_text">#8D8D8D</color>
     <color name="color_text_label">#2DA1E6</color>
 
+    <color name="color_red">#FF0000</color>
+
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
