--- a/app/src/main/res/layout/activity_myexpress.xml
+++ b/app/src/main/res/layout/activity_myexpress.xml
@@ -8,7 +8,9 @@
         android:id="@+id/search_title_part"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_title"
-        android:background="@color/color_title_bg">
+        android:background="@color/color_title_bg"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/search_back_btn"
@@ -44,12 +46,156 @@
         android:layout_below="@id/search_title_part"
         android:background="#d3d4d8"/>
 
+    <HorizontalScrollView
+        android:id="@+id/hs_myexpress"
+        android:layout_below="@id/search_line_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_title_bg">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="全部"
+                    android:textSize="14sp"
+                    android:padding="10dp"
+                    android:textColor="@color/color_red"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/color_red"
+                    android:layout_alignParentBottom="true"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="待发布"
+                    android:textSize="14sp"
+                    android:padding="10dp"
+                    android:textColor="@color/black"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/color_red"
+                    android:visibility="gone"
+                    android:layout_alignParentBottom="true"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="待付款"
+                    android:textSize="14sp"
+                    android:padding="10dp"
+                    android:textColor="@color/black"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/color_red"
+                    android:visibility="gone"
+                    android:layout_alignParentBottom="true"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="待评价"
+                    android:textSize="14sp"
+                    android:padding="10dp"
+                    android:textColor="@color/black"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/color_red"
+                    android:visibility="gone"
+                    android:layout_alignParentBottom="true"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="退款"
+                    android:textSize="14sp"
+                    android:padding="10dp"
+                    android:textColor="@color/black"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/color_red"
+                    android:visibility="gone"
+                    android:layout_alignParentBottom="true"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
+
+    <LinearLayout
+        android:id="@+id/ll_myexpress_search"
+        android:layout_below="@id/hs_myexpress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_image_bg"
+        android:padding="10dp">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:hint="输入信息"
+            android:padding="5dp"
+            android:background="@android:color/white"/>
+
+    </LinearLayout>
 
     <com.andview.refreshview.XRefreshView
         android:id="@+id/rv_my_express"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/search_line_1">
+        android:layout_below="@id/ll_myexpress_search"
+        android:background="@color/color_title_bg">
 
         <ListView
             android:id="@+id/listView_my_express"
