--- a/app/src/main/res/layout/area_price_list_item.xml
+++ b/app/src/main/res/layout/area_price_list_item.xml
@@ -11,7 +11,9 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="北京"/>
+        android:text="北京"
+        android:textSize="14sp"
+        android:textColor="@color/black"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -22,7 +24,12 @@
         <EditText
             android:id="@+id/et_area_price_first_price"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:background="@drawable/bg_login_input_with_corner"
+            android:padding="8dp"
+            android:inputType="numberDecimal"/>
 
     </LinearLayout>
 
@@ -35,7 +42,12 @@
         <EditText
             android:id="@+id/et_area_price_next_price"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:background="@drawable/bg_login_input_with_corner"
+            android:padding="8dp"
+            android:inputType="numberDecimal"/>
 
     </LinearLayout>
 
