--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -19,7 +19,7 @@
         <item>我的快递</item>
         <item>下单</item>
         <item>区域价格设置</item>
-        <item>下单显示</item>
+        <item>接单</item>
         <item></item>
         <item></item>
         <item></item>
@@ -35,7 +35,7 @@
         <item>我的快递</item>
         <item>下单</item>
         <item>区域价格设置</item>
-        <item>下单显示</item>
+        <item>接单</item>
         <item></item>
         <item></item>
         <item></item>
