--- a/app/src/main/res/layout/activity_receiving_order.xml
+++ b/app/src/main/res/layout/activity_receiving_order.xml
@@ -18,7 +18,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
             android:padding="8dp"
-            android:src="@drawable/btn_back"/>
+            android:src="@drawable/btn_back" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,83 +26,122 @@
             android:layout_centerInParent="true"
             android:text="@string/str_title_receiving_order"
             android:textColor="@color/color_view_title_text"
-            android:textSize="@dimen/font_content_size_2"/>
+            android:textSize="@dimen/font_content_size_2" />
 
     </RelativeLayout>
 
+    <View
+        android:id="@+id/search_line_1"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@id/search_title_part"
+        android:background="#d3d4d8" />
+
     <RelativeLayout
         android:id="@+id/rl_receiving_order_company"
-        android:layout_below="@id/search_title_part"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:layout_below="@id/search_line_1"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv_receiving_order_company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="快递公司："/>
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:text="快递公司："
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_toRightOf="@id/tv_receiving_order_company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="顺丰快递"/>
+            android:layout_toRightOf="@id/tv_receiving_order_company"
+            android:text="顺丰快递"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_receiving_order_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:text="设置"
-            android:layout_alignParentRight="true"/>
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/ll_receiving_order_area"
-        android:layout_below="@id/rl_receiving_order_company"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:layout_below="@id/rl_receiving_order_company"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="服务区域："/>
+            android:text="服务区域："
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="江苏省苏州市工业园区"/>
+            android:text="江苏省苏州市工业园区"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_receiving_order_push"
-        android:layout_below="@id/ll_receiving_order_area"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:layout_below="@id/ll_receiving_order_area"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="推送信息："/>
+            android:text="推送信息："
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="开关按钮"/>
+            android:text="开关按钮"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/search_line_2"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@id/ll_receiving_order_push"
+        android:background="#d3d4d8" />
+
     <HorizontalScrollView
         android:id="@+id/hs_receiving_order"
-        android:layout_below="@id/ll_receiving_order_push"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ll_receiving_order_push">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -112,60 +151,109 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="全部"/>
+                    android:padding="10dp"
+                    android:text="全部"
+                    android:textColor="@color/color_red"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/color_red" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="待报价"/>
+                    android:padding="10dp"
+                    android:text="待报价"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/color_red"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="待取件"/>
+                    android:padding="10dp"
+                    android:text="待取件"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/color_red"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="待退款"/>
+                    android:padding="10dp"
+                    android:text="待退款"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/color_red"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="已完成"/>
+                    android:padding="10dp"
+                    android:text="已完成"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/color_red"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
@@ -175,20 +263,27 @@
 
     <LinearLayout
         android:id="@+id/ll_receiving_order_search"
-        android:layout_below="@id/hs_receiving_order"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/hs_receiving_order"
+        android:background="@color/color_image_bg"
+        android:padding="10dp">
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:hint="输入信息"
+            android:padding="5dp"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_receiving_order"
-        android:layout_below="@id/ll_receiving_order_search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/ll_receiving_order_search" />
 
 </RelativeLayout>
