--- a/app/src/main/res/layout/layout_choose_place.xml
+++ b/app/src/main/res/layout/layout_choose_place.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="201dp"
+    android:layout_height="202dp"
     android:background="@color/color_bg">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 
     <HorizontalScrollView
         android:id="@+id/hs_choose_place"
