--- a/app/src/main/res/layout/activity_myexpress.xml
+++ b/app/src/main/res/layout/activity_myexpress.xml
@@ -46,134 +46,15 @@
         android:layout_below="@id/search_title_part"
         android:background="#d3d4d8"/>
 
-    <HorizontalScrollView
-        android:id="@+id/hs_myexpress"
+    <com.express56.xq.widget.TypeChooseLayout
+        android:id="@+id/tcl_myexpress"
         android:layout_below="@id/search_line_1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/color_title_bg">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="全部"
-                    android:textSize="14sp"
-                    android:padding="10dp"
-                    android:textColor="@color/color_red"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/color_red"
-                    android:layout_alignParentBottom="true"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="待发布"
-                    android:textSize="14sp"
-                    android:padding="10dp"
-                    android:textColor="@color/black"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/color_red"
-                    android:visibility="gone"
-                    android:layout_alignParentBottom="true"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="待付款"
-                    android:textSize="14sp"
-                    android:padding="10dp"
-                    android:textColor="@color/black"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/color_red"
-                    android:visibility="gone"
-                    android:layout_alignParentBottom="true"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="待评价"
-                    android:textSize="14sp"
-                    android:padding="10dp"
-                    android:textColor="@color/black"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/color_red"
-                    android:visibility="gone"
-                    android:layout_alignParentBottom="true"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="退款"
-                    android:textSize="14sp"
-                    android:padding="10dp"
-                    android:textColor="@color/black"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/color_red"
-                    android:visibility="gone"
-                    android:layout_alignParentBottom="true"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </HorizontalScrollView>
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:id="@+id/ll_myexpress_search"
-        android:layout_below="@id/hs_myexpress"
+        android:layout_below="@id/tcl_myexpress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_image_bg"
