--- a/app/src/main/res/layout/activity_receiving_order.xml
+++ b/app/src/main/res/layout/activity_receiving_order.xml
@@ -121,12 +121,9 @@
             android:textColor="@color/black"
             android:textSize="14sp" />
 
-        <TextView
+        <com.kyleduo.switchbutton.SwitchButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="开关按钮"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
@@ -137,135 +134,17 @@
         android:layout_below="@id/ll_receiving_order_push"
         android:background="#d3d4d8" />
 
-    <HorizontalScrollView
-        android:id="@+id/hs_receiving_order"
+    <com.express56.xq.widget.TypeChooseLayout
+        android:id="@+id/tcl_receiving_order"
+        android:layout_below="@id/search_line_2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ll_receiving_order_push">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="全部"
-                    android:textColor="@color/color_red"
-                    android:textSize="14sp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/color_red" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="待报价"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/color_red"
-                    android:visibility="gone" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="待取件"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/color_red"
-                    android:visibility="gone" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="待退款"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/color_red"
-                    android:visibility="gone" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="已完成"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/color_red"
-                    android:visibility="gone" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </HorizontalScrollView>
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:id="@+id/ll_receiving_order_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/hs_receiving_order"
+        android:layout_below="@id/tcl_receiving_order"
         android:background="@color/color_image_bg"
         android:padding="10dp">
 
