--- a/app/src/main/res/layout/activity_receiving_order.xml
+++ b/app/src/main/res/layout/activity_receiving_order.xml
@@ -140,24 +140,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <LinearLayout
+    <com.express56.xq.widget.SearchBarLayout
         android:id="@+id/ll_receiving_order_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_below="@id/tcl_receiving_order"
-        android:background="@color/color_image_bg"
-        android:padding="10dp">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:hint="输入信息"
-            android:padding="5dp"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
-
-    </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_receiving_order"
