--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -20,8 +20,8 @@
         <item>下单</item>
         <item>区域价格设置</item>
         <item>接单</item>
-        <item></item>
-        <item></item>
+        <item>支付宝测试</item>
+        <item>充值</item>
         <item></item>
         <item></item>
         <item></item>
@@ -36,8 +36,8 @@
         <item>下单</item>
         <item>区域价格设置</item>
         <item>接单</item>
-        <item></item>
-        <item></item>
+        <item>支付宝测试</item>
+        <item>充值</item>
         <item></item>
         <item></item>
         <item></item>
@@ -53,8 +53,8 @@
         <item>search</item>
         <item>search</item>
         <item>search</item>
-        <item>other</item>
-        <item>other</item>
+        <item>search</item>
+        <item>search</item>
         <item>other</item>
         <item>other</item>
         <item>other</item>
@@ -67,8 +67,8 @@
         <item>search</item>
         <item>search</item>
         <item>search</item>
-        <item>other</item>
-        <item>other</item>
+        <item>search</item>
+        <item>search</item>
         <item>other</item>
         <item>other</item>
         <item>other</item>
