--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -38,6 +38,7 @@
             android:background="#d3d4d8"/>
 
     <ScrollView
+            android:layout_below="@id/search_line_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true">
